# Feedboard

./: LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  articles.py  auth.py  data.py  feeds.py  preferences.py  users.py  ws.py
backend/core/: config.py  exception_handlers.py  logging_config.py  security.py  tasks.py
backend/db/: init_db.py  init_tortoise.py
backend/migrations/models/: 0_20250630173144_init.py  1_20250630171810_None.py
backend/models/: __init__.py  article.py  feed.py  user.py
backend/services/: article_service.py  feed_service.py  user_service.py
frontend/: .env.example  Dockerfile  README.md  env.d.ts  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src-tauri/: tauri.conf.json
frontend/src/api/: index.ts
frontend/src/assets/: main.css
frontend/src/components/article/: ArticleDetail.vue  ArticleList.vue
frontend/src/components/common/: MessageNotification.vue
frontend/src/components/feed/: AddFeedDialog.vue  FeedList.vue
frontend/src/router/: index.ts
frontend/src/stores/: article.ts  auth.ts  feed.ts  preferences.ts  unread.ts
frontend/src/utils/: autoRefresh.ts  notification.ts  websocket.ts
frontend/src/views/: ArticleView.vue  FavoritesView.vue  FeedDetailView.vue  FeedManageView.vue  HomeView.vue  LatestView.vue  LoginView.vue  ProfileView.vue  ReadLaterView.vue  RegisterView.vue  SearchView.vue  SettingsView.vue  UnreadView.vue
(+2 files in other folders)
